--- a/iCourse/MainWindow.xaml
+++ b/iCourse/MainWindow.xaml
@@ -5,21 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:iCourse"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid Background="#FF1F1F1F">
+        Title="iCourse" Height="400" Width="600" WindowStartupLocation="CenterScreen">
+    <Grid Background="#1F1F1F" Height="390" VerticalAlignment="Top">
         <Grid.RowDefinitions>
-            <RowDefinition Height="69*"/>
-            <RowDefinition Height="365*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="112*"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="100*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="11*"/>
-            <ColumnDefinition Width="149*"/>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="145*"/>
+            <ColumnDefinition Width="78*"/>
+            <ColumnDefinition Width="327*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="username" Grid.Column="1" HorizontalAlignment="Left" Margin="0,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="#FF2E2E2E" TextChanged="TextBox_TextChanged" Height="25" RenderTransformOrigin="0.625,3.003" Grid.Row="1" Foreground="White"/>
-        <TextBox x:Name="password" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="#FF2E2E2E" TextChanged="TextBox_TextChanged" Height="25" Margin="0,136,0,0" Foreground="White"/>
-        <Button x:Name="LoginButton" Grid.Column="1" Content="登录" HorizontalAlignment="Left" Height="35" Margin="0,205,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120" Background="#FF2E2E2E" FontSize="14" Foreground="White" Click="LoginButton_Click"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="15" Margin="0,25,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="110" Foreground="White" FontSize="14"><Run Language="zh-cn" Text="账号"/></TextBlock>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="15" Margin="0,115,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="110" Foreground="White" Text="密码" FontSize="14"/>
-        <TextBlock x:Name="ConsoleBox" Grid.Column="1" HorizontalAlignment="Left" Height="275" Margin="180,10,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="505" Background="#FF2E2E2E" FontSize="14" Foreground="White"/>
+
+        <!-- Username Label and TextBox -->
+        <TextBlock Grid.Row="1" HorizontalAlignment="Left" Margin="40,49,0,-10" Foreground="White" FontSize="14" Grid.RowSpan="3" Width="31" Grid.ColumnSpan="2">
+            账号:
+        </TextBlock>
+        <TextBox x:Name="username" Grid.Row="1" Margin="40,0,0,0" VerticalAlignment="Center" Background="#2E2E2E" Foreground="White" FontSize="14" Height="25" TextChanged="TextBox_TextChanged" Grid.ColumnSpan="2"/>
+
+        <!-- Password Label and PasswordBox -->
+        <TextBlock Grid.Row="1" HorizontalAlignment="Left" Margin="40,129,0,-10" Foreground="White" FontSize="14" Grid.RowSpan="3" Width="31" Grid.ColumnSpan="2">
+            密码:
+        </TextBlock>
+        <PasswordBox x:Name="password" Grid.Row="1" Margin="40,162,0,0" VerticalAlignment="Top" Background="#2E2E2E" Foreground="White" FontSize="14" Height="24" Grid.ColumnSpan="2"/>
+
+        <!-- Login Button -->
+        <Button x:Name="LoginButton" Grid.Row="3" Content="登录" HorizontalAlignment="Left" Margin="40,20,0,0" VerticalAlignment="Top" Width="155" Height="34" Background="#3A3A3A" Foreground="White" FontSize="16" Click="LoginButton_Click" Grid.ColumnSpan="2"/>
+
+        <!-- Console Output -->
+        <TextBlock x:Name="ConsoleBox" Grid.Row="1" Grid.Column="3" Margin="0,49,40,0" VerticalAlignment="Top" Background="#2E2E2E" Foreground="White" FontSize="14" TextWrapping="Wrap" Padding="10" Height="275" Grid.RowSpan="3"/>
     </Grid>
 </Window>
