--- a/iCourse/MainWindow.xaml
+++ b/iCourse/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="iCourse" Height="375" Width="600" WindowStartupLocation="CenterScreen">
-    <Grid Background="#1F1F1F" Height="390" VerticalAlignment="Top">
+    <Grid Background="#1F1F1F" Height="365" VerticalAlignment="Top">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="112*"/>
-            <RowDefinition Height="5*"/>
-            <RowDefinition Height="100*"/>
+            <RowDefinition Height="197*"/>
+            <RowDefinition Height="0*"/>
+            <RowDefinition Height="168*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50*"/>
@@ -23,16 +23,16 @@
         <TextBlock Grid.Row="1" HorizontalAlignment="Left" Margin="9,59,0,-20" Foreground="White" FontSize="14" Grid.RowSpan="3" Width="32" Grid.Column="1">
             账号:
         </TextBlock>
-        <TextBox x:Name="username" Grid.Row="1" Margin="10,0,15,0" VerticalAlignment="Center" Background="#2E2E2E" Foreground="White" FontSize="14" Height="25" Grid.Column="1"/>
+        <TextBox x:Name="username" Grid.Row="1" Margin="10,0,15,0" VerticalAlignment="Center" Background="#2E2E2E" Foreground="White" FontSize="14" Height="28" Grid.Column="1"/>
 
         <!-- Password Label and PasswordBox -->
         <TextBlock Grid.Row="1" HorizontalAlignment="Left" Margin="10,134,0,39" Foreground="White" FontSize="14" Width="31" Grid.Column="1">
             密码:
         </TextBlock>
-        <PasswordBox x:Name="password" Grid.Row="1" Margin="9,167,0,0" VerticalAlignment="Top" Background="#2E2E2E" Foreground="White" FontSize="14" Height="24" Grid.Column="1" HorizontalAlignment="Left" Width="121"/>
+        <PasswordBox x:Name="password" Grid.Row="1" Margin="9,167,0,0" VerticalAlignment="Top" Background="#2E2E2E" Foreground="White" FontSize="14" Height="28" Grid.Column="1" HorizontalAlignment="Left" Width="121"/>
 
         <!-- Login Button -->
-        <Button x:Name="LoginButton" Grid.Row="3" Content="登录" HorizontalAlignment="Center" Margin="0,24,0,0" VerticalAlignment="Top" Width="120" Height="33" Background="#3A3A3A" Foreground="White" FontSize="16" Click="LoginButton_Click" RenderTransformOrigin="0.71,0.406" Grid.Column="1"/>
+        <Button x:Name="LoginButton" Grid.Row="3" Content="登录" Margin="9,45,0,0" VerticalAlignment="Top" Width="120" Height="33" Background="#3A3A3A" Foreground="White" FontSize="16" Click="LoginButton_Click" RenderTransformOrigin="0.71,0.406" Grid.Column="1" HorizontalAlignment="Left"/>
 
         <!-- Console Output -->
         <ScrollViewer x:Name="ConsoleScrollViewer" Grid.Row="1" Grid.Column="3" Margin="10,49,40,90" Background="#2E2E2E" Grid.RowSpan="3">
