--- a/iCourse/MainWindow.xaml
+++ b/iCourse/MainWindow.xaml
@@ -32,10 +32,10 @@
         <PasswordBox x:Name="password" KeyDown ="password_KeyDown" Grid.Row="1" Margin="9,167,0,0" VerticalAlignment="Top" Background="#2E2E2E" Foreground="White" FontSize="14" Height="28" Grid.Column="1" HorizontalAlignment="Left" Width="121"/>
 
         <!-- Auto-Login Checkbox -->
-        <CheckBox x:Name="autoLoginCheckBox" Content="自动登录" Grid.Row="3" Margin="10,16,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14" Grid.Column="1" Height="24"/>
-
+        <CheckBox x:Name="autoLoginCheckBox" Content="自动登录" Grid.Row="3" Margin="10,39,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14" Grid.Column="1" Height="24" RenderTransformOrigin="0.444,2.128"/>
+        <CheckBox x:Name="autoSelectBatchCheckBox" Content="自动选择批次" Grid.Row="3" Margin="10,10,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14" Grid.Column="1" Height="24"/>
         <!-- Login Button -->
-        <Button x:Name="LoginButton" Grid.Row="3" Content="登录" Margin="9,45,0,0" VerticalAlignment="Top" Width="120" Height="33" Background="#3A3A3A" Foreground="White" FontSize="16" Click="LoginButton_Click" RenderTransformOrigin="0.71,0.406" Grid.Column="1" HorizontalAlignment="Left"/>
+        <Button x:Name="LoginButton" Grid.Row="3" Content="登录" Margin="9,0,0,0" Width="120" Height="33" Background="#3A3A3A" Foreground="White" FontSize="16" Click="LoginButton_Click" RenderTransformOrigin="0.71,0.406" Grid.Column="1" HorizontalAlignment="Left"/>
 
         <!-- Console Output -->
         <ScrollViewer x:Name="ConsoleScrollViewer" Grid.Row="1" Grid.Column="3" Margin="10,49,40,90" Background="#2E2E2E" Grid.RowSpan="3">
