--- a/iCourse/App.xaml
+++ b/iCourse/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="iCourse.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml"
+             StartupUri="/Views/MainWindow.xaml"
              Startup="Application_Startup"
              Exit="Application_Exit">
     <Application.Resources>
