--- a/iCourse/Views/SelectBatchWindow.xaml
+++ b/iCourse/Views/SelectBatchWindow.xaml
@@ -3,37 +3,47 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:iCourse"
+        xmlns:local="clr-namespace:iCourse.Views"
+        xmlns:vm="clr-namespace:iCourse.ViewModels"
         mc:Ignorable="d"
         Title="选课批次" Height="465" Width="600">
+    <Window.DataContext>
+        <vm:SelectBatchViewModel />
+    </Window.DataContext>
     <Grid Background="#2E2E2E">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        <ListBox Name="objectListBox" 
+        <ListBox ItemsSource="{Binding BatchList}" 
+                 SelectedItem="{Binding SelectedBatch}"
                  DisplayMemberPath="batchName" 
-                 SelectionChanged="objectListBox_SelectionChanged" 
                  HorizontalAlignment="Stretch" 
-                 VerticalAlignment="Stretch" Background="#454545" Foreground="White" FontSize="14" Margin="10"/>
+                 VerticalAlignment="Stretch" 
+                 Background="#454545" 
+                 Foreground="White" 
+                 FontSize="14" 
+                 Margin="10"/>
         <StackPanel Grid.Column="1" Margin="0,20,0,10" HorizontalAlignment="Center" Width="360">
             <TextBlock Text="轮次码:" FontWeight="Bold" Foreground="White"/>
-            <TextBlock Name="batchCodeTextBlock" Margin="0,0,0,10" Foreground="White"/>
+            <TextBlock Text="{Binding SelectedBatch.batchId}" Margin="0,0,0,10" Foreground="White"/>
             <TextBlock Text="轮次名:" FontWeight="Bold" Foreground="White"/>
-            <TextBlock Name="batchNameTextBlock" Margin="0,0,0,10" Foreground="White"/>
+            <TextBlock Text="{Binding SelectedBatch.batchName}" Margin="0,0,0,10" Foreground="White"/>
             <TextBlock Text="开始时间:" FontWeight="Bold" Foreground="White"/>
-            <TextBlock Name="beginTimeTextBlock" Margin="0,0,0,10" Foreground="White"/>
+            <TextBlock Text="{Binding SelectedBatch.beginTime}" Margin="0,0,0,10" Foreground="White"/>
             <TextBlock Text="结束时间:" FontWeight="Bold" Foreground="White"/>
-            <TextBlock Name="endTimeTextBlock" Margin="0,0,0,10" Foreground="White"/>
+            <TextBlock Text="{Binding SelectedBatch.endTime}" Margin="0,0,0,10" Foreground="White"/>
             <TextBlock Text="选课策略:" FontWeight="Bold" Foreground="White"/>
-            <TextBlock Name="tacticNameTextBlock" Margin="0,0,0,10" Foreground="White"/>
+            <TextBlock Text="{Binding SelectedBatch.tacticName}" Margin="0,0,0,10" Foreground="White"/>
             <TextBlock Text="不可选原因:" FontWeight="Bold" Foreground="White"/>
-            <TextBlock Name="noSelectReasonTextBlock" Margin="0,0,0,10" Foreground="White"/>
+            <TextBlock Text="{Binding SelectedBatch.noSelectReason}" Margin="0,0,0,10" Foreground="White"/>
             <TextBlock Text="选课类型:" FontWeight="Bold" Foreground="White"/>
-            <TextBlock Name="typeNameTextBlock" Margin="0,0,0,10" Foreground="White"/>
+            <TextBlock Text="{Binding SelectedBatch.typeName}" Margin="0,0,0,10" Foreground="White"/>
             <TextBlock Text="是否可选:" FontWeight="Bold" Foreground="White"/>
-            <TextBlock Name="canSelectTextBlock" Margin="0,0,0,10" Foreground="White"/>
-            <Button Name="confirmButton" Content="确定" Width="100" Height="30" HorizontalAlignment="Center" Margin="0,20,0,0" Background="#FF5E5E5E" Foreground="White" Click="Button_Click"/>
+            <TextBlock Text="{Binding SelectedBatch.canSelect, Converter={StaticResource BooleanToYesNoConverter}}" Margin="0,0,0,10" Foreground="White"/>
+            <Button Content="确定" Width="100" Height="30" HorizontalAlignment="Center" Margin="0,20,0,0" Background="#FF5E5E5E" Foreground="White" 
+                    Command="{Binding ConfirmSelectionCommand}" 
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"/>
         </StackPanel>
     </Grid>
 </Window>
