--- a/iCourse/Views/SelectBatchWindow.xaml
+++ b/iCourse/Views/SelectBatchWindow.xaml
@@ -15,7 +15,7 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        <ListBox ItemsSource="{Binding BatchList}" 
+        <ListBox ItemsSource="{Binding BatchList, Mode=TwoWay}" 
                  SelectedItem="{Binding SelectedBatch}"
                  DisplayMemberPath="batchName" 
                  HorizontalAlignment="Stretch" 
@@ -40,7 +40,7 @@
             <TextBlock Text="选课类型:" FontWeight="Bold" Foreground="White"/>
             <TextBlock Text="{Binding SelectedBatch.typeName}" Margin="0,0,0,10" Foreground="White"/>
             <TextBlock Text="是否可选:" FontWeight="Bold" Foreground="White"/>
-            <TextBlock Text="{Binding SelectedBatch.canSelect, Converter={StaticResource BooleanToYesNoConverter}}" Margin="0,0,0,10" Foreground="White"/>
+            <TextBlock Text="{Binding SelectedBatch.canSelect}" Margin="0,0,0,10" Foreground="White"/>
             <Button Content="确定" Width="100" Height="30" HorizontalAlignment="Center" Margin="0,20,0,0" Background="#FF5E5E5E" Foreground="White" 
                     Command="{Binding ConfirmSelectionCommand}" 
                     CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"/>
