--- a/iCourse/Views/MainWindow.xaml
+++ b/iCourse/Views/MainWindow.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm ="clr-namespace:iCourse.ViewModels"
+        xmlns:hc="https://handyorg.github.io/handycontrol"
+        xmlns:helper="clr-namespace:iCourse.Helpers"
         mc:Ignorable="d"
         Title="iCourse" Height="375" Width="600" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
@@ -100,7 +102,10 @@
                 />
 
         <!-- Console Output -->
-        <ScrollViewer x:Name="ConsoleScrollViewer" Grid.Row="1" Grid.Column="3" Margin="10,49,40,90" Background="#2E2E2E" Grid.RowSpan="3">
+        <hc:ScrollViewer x:Name="ConsoleScrollViewer" Grid.Row="1" Grid.Column="3" Margin="10,49,40,90" Background="#2E2E2E" Grid.RowSpan="3">
+            <hc:Interaction.Behaviors>
+                <helper:AutoScrollBehavior ItemsSource="{Binding LogMessages}" />
+            </hc:Interaction.Behaviors>
             <ItemsControl ItemsSource="{Binding LogMessages}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
@@ -108,6 +113,6 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-        </ScrollViewer>
+        </hc:ScrollViewer>
     </Grid>
 </Window>
