--- a/iCourse/Views/MainWindow.xaml
+++ b/iCourse/Views/MainWindow.xaml
@@ -27,7 +27,7 @@
         <!-- Username Label and TextBox -->
         <TextBlock Grid.Row="1" 
                    HorizontalAlignment="Left" 
-                   Margin="9,59,0,113" 
+                   Margin="8,60,0,113" 
                    Foreground="White" 
                    FontSize="14" 
                    Width="32" 
@@ -35,29 +35,29 @@
             账号:
         </TextBlock>
         <TextBox Grid.Row="1" 
-                 Margin="10,0,15,0" 
+                 Margin="9,0,16,0" 
                  VerticalAlignment="Center" 
-                 Background="#2E2E2E" 
-                 Foreground="White" 
+                 Background="Snow" 
+                 Foreground="Black" 
                  FontSize="14" 
                  Height="28" 
                  Grid.Column="1"
-                 Text="{Binding Username, Mode = TwoWay}"/>
+                 Text="{Binding Username}"/>
 
         <!-- Password Label and PasswordBox -->
         <TextBlock Grid.Row="1" 
                    HorizontalAlignment="Left" 
-                   Margin="10,134,0,39" 
+                   Margin="9,145,0,28" 
                    Foreground="White" 
                    FontSize="14" Width="31" 
                    Grid.Column="1">
             密码:
         </TextBlock>
         <TextBox  Grid.Row="1" 
-                      Margin="9,167,0,0" 
+                      Margin="9,169,0,0" 
                       VerticalAlignment="Top" 
-                      Background="#2E2E2E" 
-                      Foreground="White" 
+                      Background="White" 
+                      Foreground="Black" 
                       FontSize="14" 
                       Height="28" 
                       Grid.Column="1" 
@@ -68,7 +68,7 @@
         <!-- Auto-Login Checkbox -->
         <CheckBox  Content="自动登录" 
                    Grid.Row="3" 
-                   Margin="10,39,0,0" 
+                   Margin="10,50,0,0" 
                    VerticalAlignment="Top" 
                    Foreground="White" 
                    FontSize="14" 
@@ -78,7 +78,7 @@
                    IsChecked="{Binding AutoLogin, Mode = TwoWay}"/>
         <CheckBox  Content="自动选择批次" 
                    Grid.Row="3" 
-                   Margin="10,10,0,0" 
+                   Margin="10,21,0,0" 
                    VerticalAlignment="Top" 
                    Foreground="White" 
                    FontSize="14" 
@@ -87,18 +87,17 @@
                    IsChecked="{Binding AutoSelectBatch, Mode = TwoWay}"/>
         <!-- Login Button -->
         <Button Grid.Row="3" 
-                Content="登录"
-                Margin="9,0,0,0" 
+                Content="登录" 
                 Width="120" 
-                Height="33" 
-                Background="#3A3A3A"
+                Height="32" 
+                Background="#FF2E2E2E"
                 Foreground="White" 
                 FontSize="16" 
-                RenderTransformOrigin="0.71,0.406"
+                RenderTransformOrigin="0.708,0.855"
                 Grid.Column="1" 
                 HorizontalAlignment="Left"
                 IsEnabled="{Binding CanLogin}"
-                Command="{Binding LoginCommand}"
+                Command="{Binding LoginCommand}" Margin="9,79,0,0" VerticalAlignment="Top"
                 />
 
         <!-- Console Output -->
@@ -114,5 +113,10 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </hc:ScrollViewer>
+        <ProgressBar  Grid.Column="3" 
+                      Margin="10,91,40,57" 
+                      Grid.Row="3"
+                      Visibility="{Binding ProgressBarVisibility}"
+                      Value="{Binding ProgressValue}"/>
     </Grid>
 </Window>
